@restjs/core v0.0.4 installed

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": false,
   "main": "./dist/main.js",
   "scripts": {
-    "dev": "nodemon --watch 'src/**/*' -e ts,tsx --exec ts-node src/main.tsx",
+    "dev": "nodemon --exec ts-node src/main.tsx",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -p tsconfig.json",
     "start": "npm run build && node ./dist/main.js"
@@ -26,7 +26,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "reflect-metadata": "^0.1.13",
-    "@restjs/core": "^0.0.2"
+    "@restjs/core": "^0.0.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.6",
