--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Alireza Roosta",
   "license": "MIT",
   "dependencies": {
+    "@restjs/core": "^0.0.4",
     "@types/express": "^4.17.9",
     "@types/node": "^14.14.9",
     "@types/react": "^16.14.0",
@@ -26,7 +27,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "reflect-metadata": "^0.1.13",
-    "@restjs/core": "^0.0.4"
+    "typescript": "^4.1.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.6",
