--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "restjs-starter",
-  "version": "0.0.1",
-  "description": "A simple framework to create the back-end applications with using JSX syntax (ReactJS)",
+  "version": "0.0.9",
+  "description": "A folder structure and some configuration files for getting started REST-JS framework.",
   "private": false,
   "main": "./dist/main.js",
   "scripts": {
     "dev": "nodemon --exec ts-node src/main.tsx",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -p tsconfig.json",
-    "start": "npm run build && node ./dist/main.js"
+    "start": "npm run build && node ."
   },
   "keywords": [
     "react",
@@ -17,21 +17,23 @@
   "author": "Alireza Roosta",
   "license": "MIT",
   "dependencies": {
-    "@restjs/core": "^0.0.4",
-    "@types/express": "^4.17.9",
-    "@types/node": "^14.14.9",
-    "@types/react": "^16.14.0",
-    "@types/react-dom": "^16.9.9",
+    "@restjs/core": "^0.0.9",
+    "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "express": "^4.17.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "reflect-metadata": "^0.1.13",
-    "typescript": "^4.1.2"
+    "typeorm": "^0.2.29"
   },
   "devDependencies": {
+    "@types/express": "^4.17.9",
+    "@types/node": "^14.14.9",
+    "@types/react": "^16.14.0",
+    "@types/react-dom": "^16.9.9",
     "nodemon": "^2.0.6",
-    "ts-node": "^9.0.0"
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.2"
   },
   "nodemonConfig": {
     "watch": [
